k8s/boa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boa-ingress
  namespace: boa
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "fraudguard-ip"
    networking.gke.io/managed-certificates: "boa-ssl-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: boa.mohankrishna.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
